# Denarius

./: .gitignore  Cargo.toml  sqlx-data.json
discord/: Cargo.toml
discord/src/: main.rs
migrations/: 20221104034111_init.sql  20221104041200_transaction_log.sql
migrations_plan/: 20221104041213_account_details.sql  20221104041354_friends.sql  20221104041433_accountants.sql  20221104041859_organisations.sql
server/: Cargo.toml
server/src/: discord_id.rs  error.rs  main.rs  payment.rs  timestamp.rs
server/src/routes/: eco.rs  person.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  money.rs  types.rs
shared/src/routes/: eco.rs  mod.rs  person.rs
