[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
poise = "0.4.1"
env_logger = "0.9.3"
shared = { path = "../shared" }
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]

[dependencies.uuid]
version = "1.2.1"
features = [ "v7", "v4", "fast-rng", "serde" ]