[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
poise = "0.5.2"
env_logger = "0.10.0"
shared = { path = "../shared" }
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"] }

[dependencies.tokio]
version = "1.24.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]

[dependencies.uuid]
version = "1.2.2"
features = [ "v7", "fast-rng", "serde" ]