[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
tokio = { version = "1.22.0", features = ["full"] }
dotenvy = "0.15.6"
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
shared = { path = "../shared" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.6.2"
features = [ "macros", "uuid", "chrono", "runtime-tokio-rustls", "postgres", "any" ]

[dependencies.uuid]
version = "1.2.1"
features = [ "v7", "v4", "fast-rng", "serde" ]

[profile.dev.package.sqlx-macros]
opt-level = 3