[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = { version = "1.24.2", features = ["full"] }
dotenvy = "0.15.6"
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shared = { path = "../shared" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.6.2"
features = [ "macros", "uuid", "chrono", "runtime-tokio-rustls", "postgres", "offline" ]

[dependencies.uuid]
version = "1.2.2"
features = [ "v7", "fast-rng", "serde" ]