[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
async-trait = "0.1.58"
once_cell = "1.16.0"

[dependencies.uuid]
version = "1.2.1"
features = [ "v7", "v4", "fast-rng", "serde" ]

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full", "macros"] }
color-eyre = "0.6.2"
